--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
             Nueva nube para crear un nuevo QR y conectar usuarios asociados a una pregunta.
             Una vez conectados los usuarios, no debe refrescar más. Puedes ir añadiendo nuevas preguntas sin crear
             nuevas nubes.
-            El usuario solo puede añadir una palabra por pregunta, máximo un espacio y 25 caracteres.
+            El usuario solo puede añadir una palabra por pregunta, máximo 25 caracteres.
         </div>
 
         <div class="controls">
