--- a/public/visitor.html
+++ b/public/visitor.html
@@ -121,7 +121,7 @@
         <h1><strong>Pregunta:<span id="question"></span></strong> </h1>
 
         <div class="inputRow">
-            <input id="wordsInput" placeholder="Máx 2 palabras" maxlength="25" />
+            <input id="wordsInput" placeholder="Máx 25 cars." maxlength="25" />
             <button id="sendBtn">Enviar</button>
         </div>
 
